--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install -g firebase-tools
-        - flutter channel stable
-        - flutter upgrade
+        - wget https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_2.2.3-stable.tar.xz
+        - tar xf flutter_linux_2.2.3-stable.tar.xz
+        - export PATH="$PATH:`pwd`/flutter/bin"
+        - flutter precache
+        - flutter doctor
         - flutter config --enable-web
     build:
       commands:
+        - export PATH="$PATH:`pwd`/flutter/bin"
         - flutter build web
   artifacts:
     baseDirectory: build/web
@@ -17,3 +20,4 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+      - .pub-cache
